Wrote custom smooth scroll (no longer using smoothscroll.js and restructured content for readability

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,6 @@
+nav.navbar ul.nav>li>a.active {
+	color:red;
+}
 .contact-container {
 	height:50px;
 	position:fixed; 
